@@ -61,6 +61,7 @@
 		PLAYMODE_NORMAL,
 		PLAYMODE_SINGLE,
 		PLAYMODE_REPEAT,
+		PLAYMODE_GLOBAL_NEXT,
 	};
 
 	class CScreenHandler
